Working. STarting marionette branch

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Regional Data Portal</title>
   </head>
   <body>
-  <div id="content"></div>
+  <table id="content"></table>
 
   <script data-main="js/init.js" src="libs/javascript/requirejs/require.js"></script>
   </body>
